Revert changes to `AnsiOutputStream` and add in a FindBugs exclusion for the class
The class is copied from the jansi repository, so keeping the class as similar as possible makes it easier to import upstream changes.
This change excludes any issues detected by FindBugs in that class.